Reduce outstanding warnings, and disable stylecop warnings temporarily.

--- a/src/TumblThree/Directory.build.props
+++ b/src/TumblThree/Directory.build.props
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)analyzers.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <noWarn>1591</noWarn>
+</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="stylecop.analyzers" Version="1.1.1-beta.61" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.3" PrivateAssets="all" />
