--- a/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
+++ b/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Models\Files\TumblrBlogFiles.cs" />
     <Compile Include="Models\Files\Files.cs" />
     <Compile Include="Models\LoliSafeTypes.cs" />
+    <Compile Include="Models\TumblrBlogCrawlerTypes.cs" />
     <Compile Include="Models\MetadataType.cs" />
     <Compile Include="Models\GfycatType.cs" />
     <Compile Include="Models\Blogs\IBlog.cs" />
