--- a/lib/RateLimiter/RateLimiter/RateLimiter.csproj
+++ b/lib/RateLimiter/RateLimiter/RateLimiter.csproj
@@ -36,7 +36,7 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\x64\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>bin\Debug\Guava.RateLimiter.xml</DocumentationFile>
+    <DocumentationFile>bin\x64\Debug\Guava.RateLimiter.xml</DocumentationFile>
     <NoWarn>1591</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
