--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,18 @@
-version: 1.0.10.{build}
+init:
+  # Set "build version number" to "short-commit-hash" or when tagged to "tag name" (Travis style)
+  - ps: >-
+      if ($env:APPVEYOR_REPO_TAG -eq "true")
+      {
+        $x = $env:APPVEYOR_REPO_TAG_NAME
+        if($x.startswith("v","CurrentCultureIgnoreCase")) { $x = $x.substring(1) }
+        Update-AppveyorBuild -Version "$x"
+        $env:MY_BUILD_VERSION="$x"
+      }
+      else
+      {
+        Update-AppveyorBuild -Version "1.0.10.$env:APPVEYOR_BUILD_NUMBER"
+      }
+#version: 1.0.10.{build}
 image: Visual Studio 2017
 configuration: Release
 platform: x64
@@ -8,10 +22,20 @@ assembly_info:
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
+for:
+-
+  branches:
+    only:
+    - master
+  #version: 1.0.10.{build}
+-
+  configuration: Release
+
 before_build:
 - ps: scripts/appveyor-prebuild.ps1
 
     nuget restore "src\TumblThree\TumblThree.sln"
+
 build:
   project: src\TumblThree\TumblThree.sln
   verbosity: normal
@@ -20,3 +44,15 @@ after_build:
 artifacts:
 - path: artifacts/*.zip
   name: TumblThree
+deploy:
+  release: TumblThree-v$(MY_BUILD_VERSION)
+  description: 'Release description'
+  provider: GitHub
+  auth_token:
+    secure: f9Te5YVSvTyx7Mpv3fzxeg/qdCX5jhP1Sy86qXKdy702FlcaQ8OHrohzn4M/TZCM
+  artifact: /.*\.zip/              # upload all zips to release assets
+  draft: true
+  prerelease: false
+  on:
+    #branch: master                 # release from master branch only
+    APPVEYOR_REPO_TAG: true        # deploy on tag push only
