Fix issue #92 Crawl evaluates thousands of blogs
Since Tumblr's new privacy consent agreement and its cookies, the Liked/by crawler got stuck in an endless loop, because the .net's internal WebRequest cannot handle redirects that want to set cookies at the same time. Additionally they use a cookie value that .net cannot handle.
So now the redirects are done manually and the (broken) cookies are read with a custom parser.

Changes:
- doing http redirects manually due to .net's inability to handle redirects with cookies in the response
- added custom cookie parser for handling wrong encoded cookies
- changed some spelling errors

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Controllers\ManagerController.cs" />
     <Compile Include="Controllers\ModuleController.cs" />
     <Compile Include="Controllers\QueueController.cs" />
+    <Compile Include="CookieParser.cs" />
     <Compile Include="Crawler\AbstractTumblrCrawler.cs" />
     <Compile Include="DataModels\TumblrApi\Conversation.cs" />
     <Compile Include="DataModels\TumblrApi\Photo.cs" />
@@ -138,6 +139,7 @@
     <Compile Include="Parser\ITumblrToText.cs" />
     <Compile Include="Parser\IUguuParser.cs" />
     <Compile Include="Parser\IWebmshareParser.cs" />
+    <Compile Include="ResponseDetails.cs" />
     <Compile Include="Services\ILoginService.cs" />
     <Compile Include="Services\IWebRequestFactory.cs" />
     <Compile Include="Crawler\TumblrBlogDetector.cs" />
