change build script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 #version: 1.0.10.{build}
-skip_branch_with_pr: true
+#skip_branch_with_pr: true
 image: Visual Studio 2019
 install:
   # Set "build version number" to current version or when tagged to "tag name"
