change build script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,6 +43,9 @@ assembly_info:
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
 configuration: Release
+branches:
+  except:
+    - dummy_branch
 for:
   -
     matrix:
