Issue #20: Support Tumblr likes

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Converter\SingleOrArrayConverter.cs" />
     <Compile Include="CookieParser.cs" />
     <Compile Include="Crawler\AbstractTumblrCrawler.cs" />
+    <Compile Include="Crawler\TumblrPhotoLookup.cs" />
     <Compile Include="DataModels\ImageResponse.cs" />
     <Compile Include="DataModels\TumblrApi\Conversation.cs" />
     <Compile Include="DataModels\TumblrApi\Photo.cs" />
