--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -95,6 +95,7 @@
     <GeneratedMSBuildEditorConfigFile>$(IntermediateOutputPath)\$(MSBuildProjectName).GeneratedMSBuildEditorConfig.editorconfig</GeneratedMSBuildEditorConfigFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -123,6 +124,7 @@
     <Compile Include="Crawler\AbstractTumblrCrawler.cs" />
     <Compile Include="Crawler\TumblrPhotoLookup.cs" />
     <Compile Include="DataModels\ImageResponse.cs" />
+    <Compile Include="DataModels\LogException.cs" />
     <Compile Include="DataModels\TumblrApi\Conversation.cs" />
     <Compile Include="DataModels\TumblrApi\Photo.cs" />
     <Compile Include="DataModels\TumblrApi\Post.cs" />
@@ -135,6 +137,7 @@
     <Compile Include="Downloader\TumblrJsonDownloader.cs" />
     <Compile Include="ErrorExceptions.cs" />
     <Compile Include="Extensions\ExceptionExtension.cs" />
+    <Compile Include="Extensions\NativeMethods.cs" />
     <Compile Include="Parser\CatBoxParser.cs" />
     <Compile Include="Parser\GfycatParser.cs" />
     <Compile Include="Parser\ICatBoxParser.cs" />
@@ -151,6 +154,7 @@
     <Compile Include="Parser\IWebmshareParser.cs" />
     <Compile Include="ResponseDetails.cs" />
     <Compile Include="Services\ILoginService.cs" />
+    <Compile Include="Services\ILogService.cs" />
     <Compile Include="Services\IWebRequestFactory.cs" />
     <Compile Include="Crawler\TumblrBlogDetector.cs" />
     <Compile Include="Parser\LoliSafeParser.cs" />
@@ -162,6 +166,7 @@
     <Compile Include="Parser\TumblrApiJsonToText.cs" />
     <Compile Include="Parser\UguuParser.cs" />
     <Compile Include="Parser\WebmshareParser.cs" />
+    <Compile Include="Services\LogService.cs" />
     <Compile Include="Services\WebRequestFactory.cs" />
     <Compile Include="DataModels\DownloadProgress.cs" />
     <Compile Include="DataModels\IPostQueue.cs" />
@@ -251,12 +256,14 @@
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\CrawlerViewModel.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsAllViewModel.cs" />
+    <Compile Include="Views\ICloseable.cs" />
     <Compile Include="Views\IDetailsViewModel.cs" />
     <Compile Include="ViewModels\ManagerViewModel.cs" />
     <Compile Include="ViewModels\QueueViewModel.cs" />
     <Compile Include="ViewModels\AuthenticateViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
+    <Compile Include="Views\IExceptionWindowView.cs" />
     <Compile Include="Views\IFullScreenMediaView.cs" />
     <Compile Include="Views\IAboutView.cs" />
     <Compile Include="Views\ICrawlerView.cs" />
