Add Twitter implementation

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -124,18 +124,24 @@
     <Compile Include="CookieParser.cs" />
     <Compile Include="Crawler\AbstractTumblrCrawler.cs" />
     <Compile Include="Crawler\TumblrPhotoLookup.cs" />
+    <Compile Include="Crawler\TwitterCrawler.cs" />
     <Compile Include="DataModels\ImageResponse.cs" />
     <Compile Include="DataModels\LogException.cs" />
+    <Compile Include="DataModels\AbstractPost.cs" />
     <Compile Include="DataModels\TumblrApi\Conversation.cs" />
     <Compile Include="DataModels\TumblrApi\Photo.cs" />
     <Compile Include="DataModels\TumblrApi\Post.cs" />
     <Compile Include="DataModels\TumblrApi\TumbleLog.cs" />
     <Compile Include="DataModels\TumblrApi\TumbleLog2.cs" />
     <Compile Include="DataModels\TumblrApi\TumblrApiJson.cs" />
-    <Compile Include="DataModels\TumblrCrawlerData\TumblrCrawlerData.cs" />
+    <Compile Include="DataModels\CrawlerData\CrawlerData.cs" />
     <Compile Include="DataModels\TumblrSearch\TumblrSearchJson.cs" />
     <Compile Include="DataModels\TumblrTaggedSearch\TumblrTaggedSearchJson.cs" />
-    <Compile Include="Downloader\TumblrJsonDownloader.cs" />
+    <Compile Include="DataModels\Twitter\TwitterPost.cs" />
+    <Compile Include="DataModels\Twitter\TwitterUser.cs" />
+    <Compile Include="DataModels\Twitter\TimelineTweets.cs" />
+    <Compile Include="Downloader\JsonDownloader.cs" />
+    <Compile Include="Downloader\TwitterDownloader.cs" />
     <Compile Include="ErrorExceptions.cs" />
     <Compile Include="Extensions\ExceptionExtension.cs" />
     <Compile Include="Extensions\NativeMethods.cs" />
@@ -252,6 +258,7 @@
     <Compile Include="ViewModels\DetailsViewModels\DetailsTumblrLikedByViewModel.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsTumblrSearchViewModel.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsTumblrTagSearchViewModel.cs" />
+    <Compile Include="ViewModels\DetailsViewModels\DetailsTwitterBlogViewModel.cs" />
     <Compile Include="ViewModels\ExceptionWindowViewModel.cs" />
     <Compile Include="ViewModels\FullScreenMediaViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
