--- a/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
+++ b/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="Models\Blogs\BlogAll.cs" />
     <Compile Include="Models\Blogs\IBlogAll.cs" />
+    <Compile Include="Models\Blogs\TwitterBlog.cs" />
     <Compile Include="Models\CatboxTypes.cs" />
     <Compile Include="Models\DetailsBlog.cs" />
     <Compile Include="Models\Blogs\Blog.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="Models\Files\TumblrHiddenBlogFiles.cs" />
     <Compile Include="Models\Files\TumblrBlogFiles.cs" />
     <Compile Include="Models\Files\Files.cs" />
+    <Compile Include="Models\Files\TwitterBlogFiles.cs" />
     <Compile Include="Models\LoliSafeTypes.cs" />
     <Compile Include="Models\TumblrBlogCrawlerTypes.cs" />
     <Compile Include="Models\MetadataType.cs" />
