--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -189,6 +189,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\DetailsViews\DetailsTwitterBlogView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\ExceptionWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -304,6 +308,9 @@
     </Compile>
     <Compile Include="Views\DetailsViews\DetailsTumblrTagSearchView.xaml.cs">
       <DependentUpon>DetailsTumblrTagSearchView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DetailsViews\DetailsTwitterBlogView.xaml.cs">
+      <DependentUpon>DetailsTwitterBlogView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ExceptionWindow.xaml.cs">
       <DependentUpon>ExceptionWindow.xaml</DependentUpon>
