Add Image Viewer with slideshow mode
- As a new feature an image viewer has been added to the blog list's context menu. It opens a form for viewing this blog's images and optionally run a slideshow. It can be used as a standalone application too.

--- a/lib/WpfImageViewer/WpfImageViewer.csproj
+++ b/lib/WpfImageViewer/WpfImageViewer.csproj
@@ -28,13 +28,14 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Resources\AppIcon.ico</ApplicationIcon>
