Add issue #170 Ability to create different collections
- When you have lots of blogs it becomes more difficult to organize the download folder. It's already possible to override the default download location per blog in its settings, but this involves manual work and the blogs still can't be shown in groups.
- It's now possible to create collections in the advanced settings. Each collection has a name and a download location. The toolbar shows a selection list with the collection names. The default collection is non-deletable and all blogs are shown when it's selected. When a created collection is chosen only the blogs created under it are shown in the list. The blog list can be sorted by the collection column.

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -145,6 +145,7 @@
     <Compile Include="ErrorExceptions.cs" />
     <Compile Include="Extensions\ExceptionExtension.cs" />
     <Compile Include="Extensions\NativeMethods.cs" />
+    <Compile Include="Extensions\PathExtension.cs" />
     <Compile Include="Parser\CatBoxParser.cs" />
     <Compile Include="Parser\GfycatParser.cs" />
     <Compile Include="Parser\ICatBoxParser.cs" />
