--- a/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
+++ b/src/TumblThree/TumblThree.Presentation/TumblThree.Presentation.csproj
@@ -257,6 +257,7 @@
     <Compile Include="Controls\SuperToolTip.cs" />
     <Compile Include="Controls\ToolTipBehavior.cs" />
     <Compile Include="Converters\BrushResourceConverter.cs" />
+    <Compile Include="Converters\CollectionMultiConverter.cs" />
     <Compile Include="Converters\TumblrBlogCrawlerTypesConverter.cs" />
     <Compile Include="Converters\BlogtypeToDisplayValueConverter.cs" />
     <Compile Include="Converters\ConverterHelper.cs" />
