Add Feedback button in About dialog
- The user shall have an easy way to provide feedback.
- A second icon (thumbs up) has been added to the about button to symbolize feedback possibility.

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -261,6 +261,7 @@
     <Compile Include="ViewModels\DetailsViewModels\DetailsTumblrTagSearchViewModel.cs" />
     <Compile Include="ViewModels\DetailsViewModels\DetailsTwitterBlogViewModel.cs" />
     <Compile Include="ViewModels\ExceptionWindowViewModel.cs" />
+    <Compile Include="ViewModels\FeedbackViewModel.cs" />
     <Compile Include="ViewModels\FullScreenMediaViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\CrawlerViewModel.cs" />
@@ -274,6 +275,7 @@
     <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\IExceptionWindowView.cs" />
+    <Compile Include="Views\IFeedbackView.cs" />
     <Compile Include="Views\IFullScreenMediaView.cs" />
     <Compile Include="Views\IAboutView.cs" />
     <Compile Include="Views\ICrawlerView.cs" />
