Fix issue #197 Gifv not downloading

--- a/lib/WpfImageViewer/App.config
+++ b/lib/WpfImageViewer/App.config
@@ -23,7 +23,7 @@
                 <value>2</value>
             </setting>
             <setting name="IncludedFileExtensions" serializeAs="String">
-                <value>.bmp,.gif,.jpeg,.jpg,.png,.tif,.tiff,.mp4</value>
+                <value>.bmp,.gif,.gifv,.jpeg,.jpg,.png,.tif,.tiff,.mp4</value>
             </setting>
             <setting name="MsgColor" serializeAs="String">
                 <value>Green</value>
