Change issue #200 JSON files missing brackets
- Until now new JSON elements have just been appended to the list/file. So the last element in the file ended with a comma and array brackets were missing totally.
- Now the files are written as and changed to complete JSON structure the next time an element is written to them.

--- a/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
+++ b/src/TumblThree/TumblThree.Applications/TumblThree.Applications.csproj
@@ -142,6 +142,7 @@
     <Compile Include="DataModels\Twitter\TwitterUser.cs" />
     <Compile Include="DataModels\Twitter\TimelineTweets.cs" />
     <Compile Include="Downloader\JsonDownloader.cs" />
+    <Compile Include="Downloader\StreamWriterWithInfo.cs" />
     <Compile Include="Downloader\TwitterDownloader.cs" />
     <Compile Include="ErrorExceptions.cs" />
     <Compile Include="Extensions\ExceptionExtension.cs" />
