Update Chinese Simplified translation

--- a/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
+++ b/src/TumblThree/TumblThree.Domain/TumblThree.Domain.csproj
@@ -163,6 +163,7 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.zh.resx" />
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
